Adding message for maxAge field
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@2801 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/silverpeas/portlets/multilang/portletsBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/portlets/multilang/portletsBundle_en.properties
@@ -25,6 +25,7 @@ portlets.validate = Confirm
 portlets.cancel = Cancel
 
 portlets.portlet.lastPublis.pref.nbPublis = Number of publications to display
+portlets.portlet.lastPublis.pref.maxAge = Maximum age for publications (in days)
 portlets.portlet.lastPublis.pref.displayDescription = Display the description
 portlets.portlet.lastPublis.error = You must enter a number between 0 and 30!
 portlets.portlet.lastPublis.help = This portlet displays the last publications created or modified in the different document manager services.<br/>You can modify the number of publications to be displayed.
