--- a/config-core/src/main/config/properties/com/silverpeas/portlets/multilang/portletsBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/portlets/multilang/portletsBundle_fr.properties
@@ -24,41 +24,42 @@
 portlets.validate = Valider
 portlets.cancel = Annuler
 
-portlets.portlet.lastPublis.pref.nbPublis = Nombre de publications \u00E0 afficher
+portlets.portlet.lastPublis.pref.nbPublis = Nombre de publications \u00e0 afficher
+portlets.portlet.lastPublis.pref.maxAge = Age maximal des publications (en jours)
 portlets.portlet.lastPublis.pref.displayDescription = Afficher la description
 portlets.portlet.lastPublis.error = Vous devez saisir un nombre en 0 et 30 !
-portlets.portlet.lastPublis.help = Cette portlet affiche les derni\u00E8res publications cr\u00E9\u00E9es ou modifi\u00E9es dans les diff\u00E9rents services de gestion documentaire.<br/>Vous pouvez param\u00E9trer le nombre de publications \u00E0 afficher.
+portlets.portlet.lastPublis.help = Cette portlet affiche les derni\u00e8res publications cr\u00e9\u00e9es ou modifi\u00e9es dans les diff\u00e9rents services de gestion documentaire.<br/>Vous pouvez param\u00e9trer le nombre de publications \u00e0 afficher.
 
-portlets.portlet.nextEvents.pref.nbEvents = Nombre d'\u00E9v\u00E9nements \u00E0 afficher
+portlets.portlet.nextEvents.pref.nbEvents = Nombre d'\u00e9v\u00e9nements \u00e0 afficher
 portlets.portlet.nextEvents.error = Vous devez saisir un nombre en 0 et 30 !
-portlets.portlet.nextEvents.help = Cette portlet affiche vos prochains rendez-vous pr\u00E9sents dans votre agenda personnel.
+portlets.portlet.nextEvents.help = Cette portlet affiche vos prochains rendez-vous pr\u00e9sents dans votre agenda personnel.
 
-portlets.portlet.myNotifications.help = Cette portlet affiche toutes les notifications re\u00E7ues.
-portlets.portlet.myBookmarks.help = Cette portlet affiche vos liens favoris. Ils peuvent \u00EAtre internes au portail ou bien pointer vers des sites web externes.
-portlets.portlet.favoriteQueries.help = Cette portlet affiche vos requ\u00EAtes favorites. Un simple clic sur une de vos requ\u00EAtes vous permet de lancer directement la recherche correspondante.
+portlets.portlet.myNotifications.help = Cette portlet affiche toutes les notifications re\u00e7ues.
+portlets.portlet.myBookmarks.help = Cette portlet affiche vos liens favoris. Ils peuvent \u00eatre internes au portail ou bien pointer vers des sites web externes.
+portlets.portlet.favoriteQueries.help = Cette portlet affiche vos requ\u00eates favorites. Un simple clic sur une de vos requ\u00eates vous permet de lancer directement la recherche correspondante.
 portlets.portlet.iFrame.help = Cette portlet affiche n'importe quel site web. Il vous suffit de renseigner son URL.
-portlets.portlet.myCheckOutFiles.help = Cette portlet affiche tous les fichiers du portail actuellement r\u00E9serv\u00E9s par vous-m\u00EAme.
-portlets.portlet.myTodos.help = Cette portlet affiche toutes les t\u00E2ches non termin\u00E9es que vous devez accomplir.
-portlets.portlet.quickInfos.help = Cette portlet affiche toutes les actualit\u00E9s du portail.
+portlets.portlet.myCheckOutFiles.help = Cette portlet affiche tous les fichiers du portail actuellement r\u00e9serv\u00e9s par vous-m\u00eame.
+portlets.portlet.myTodos.help = Cette portlet affiche toutes les t\u00e2ches non termin\u00e9es que vous devez accomplir.
+portlets.portlet.quickInfos.help = Cette portlet affiche toutes les actualit\u00e9s du portail.
 
-portlets.portlet.componentInstance.help = Cette portlet permet d'afficher un composant du portail. Si vous n'avez pas les droits suffisants pour y acc\u00E9der, un message d'erreur vous le signale.
-portlets.portlet.componentInstance.error.accessForbidden = Acc\u00E8s non autoris\u00E9 !
+portlets.portlet.componentInstance.help = Cette portlet permet d'afficher un composant du portail. Si vous n'avez pas les droits suffisants pour y acc\u00e9der, un message d'erreur vous le signale.
+portlets.portlet.componentInstance.error.accessForbidden = Acc\u00e8s non autoris\u00e9 !
 portlets.portlet.componentInstance.pref.instanceId = Identifiant du composant
 
 portlets.portlet.iFrame.pref.url = URL
 portlets.portlet.iframe.pleaseURL = Vous devez renseigner l'URL de la page web !
 
-portlets.portlet.helloSilverpeas.welcome = Bienvenue sur votre nouvelle page d'accueil !<br/>Vous pouvez param\u00E9trer comme vous le souhaitez son contenu et sa disposition.<br/>N'h\u00E9sitez pas \u00E0 d\u00E9placer les fen\u00EAtres en faisant un glisser/d\u00E9poser !
+portlets.portlet.helloSilverpeas.welcome = Bienvenue sur votre nouvelle page d'accueil !<br/>Vous pouvez param\u00e9trer comme vous le souhaitez son contenu et sa disposition.<br/>N'h\u00e9sitez pas \u00e0 d\u00e9placer les fen\u00eatres en faisant un glisser/d\u00e9poser !
 
 # Admin Page
-portlets.createPortlet=Ajouter une nouvelle fen\u00EAtre
-portlets.selectBasePortlet=S\u00E9lectionnez une portlet
-portlets.portletWindow=Nom de la fen\u00EAtre
-portlets.portletTitle=Titre de la fen\u00EAtre
+portlets.createPortlet=Ajouter une nouvelle fen\u00eatre
+portlets.selectBasePortlet=S\u00e9lectionnez une portlet
+portlets.portletWindow=Nom de la fen\u00eatre
+portlets.portletTitle=Titre de la fen\u00eatre
 portlets.createPortletWindow=Ajouter
 
-portlets.selectBasePortletWindow=S\u00E9lectionner la fen\u00EAtre \u00E0 modifier
-portlets.modifyWindow=Modifier une fen\u00EAtre
+portlets.selectBasePortletWindow=S\u00e9lectionner la fen\u00eatre \u00e0 modifier
+portlets.modifyWindow=Modifier une fen\u00eatre
 portlets.selectWidth=Choisir la colonne
 showHide=Portlet Window
 portlets.modifyPortletWindow=Modifier
@@ -70,9 +71,9 @@ portlets.thin=Colonne 2
 portlets.homepage = Ma page d'accueil
 
 portlets.admin.undeployPortlets=Supprimer une portlet
-portlets.admin.deployPortlets=D\u00E9ployer une portlet
-portlets.admin.selectWar=S\u00E9lectionnez le fichier .war contenant la portlet
-portlets.admin.selectPortlets=S\u00E9lectionnez la portlet \u00E0 supprimer
+portlets.admin.deployPortlets=D\u00e9ployer une portlet
+portlets.admin.selectWar=S\u00e9lectionnez le fichier .war contenant la portlet
+portlets.admin.selectPortlets=S\u00e9lectionnez la portlet \u00e0 supprimer
 portlets.admin.addRoles=Add Roles
 portlets.admin.selectRoles=Select Roles File
 portlets.admin.deploy=Deployer
@@ -85,8 +86,8 @@ wsrp=WSRP
 
 # Portlet window decorators
 portlets.window.unminimize=Agrandir
-portlets.window.minimize=R\u00E9duire
-portlets.window.unmaximize=R\u00E9duire
+portlets.window.minimize=R\u00e9duire
+portlets.window.unmaximize=R\u00e9duire
 portlets.window.maximize=Maximiser
 portlets.window.help=Aide
 portlets.window.edit=Modifier
@@ -94,20 +95,20 @@ portlets.window.view=Voir
 portlets.window.remove=Supprimer
 
 # Messages on Admin tab
-portlets.admin.creationSucceeded=Fen\u00EAtre cr\u00E9\u00E9e avec succ\u00E8s
-portlets.admin.creationFailed=Erreur lors de la cr\u00E9ation de la fen\u00EAtre
-portlets.admin.deploymentSucceeded=Portlet d\u00E9ploy\u00E9e avec succ\u00E8s
-portlets.admin.deploymentFailed=Echec du d\u00E9ploiement
-portlets.admin.undeploymentSucceeded=Portlet supprim\u00E9e avec succ\u00E8s
+portlets.admin.creationSucceeded=Fen\u00eatre cr\u00e9\u00e9e avec succ\u00e8s
+portlets.admin.creationFailed=Erreur lors de la cr\u00e9ation de la fen\u00eatre
+portlets.admin.deploymentSucceeded=Portlet d\u00e9ploy\u00e9e avec succ\u00e8s
+portlets.admin.deploymentFailed=Echec du d\u00e9ploiement
+portlets.admin.undeploymentSucceeded=Portlet supprim\u00e9e avec succ\u00e8s
 portlets.admin.undeploymentFailed=Echec de la suppression
-portlets.admin.warNotDeployed=Impossible de d\u00E9ployer "\u00E0 chaud" le fichier war. D\u00E9ployez le manuellement dans {0}
+portlets.admin.warNotDeployed=Impossible de d\u00e9ployer "\u00e0 chaud" le fichier war. D\u00e9ployez le manuellement dans {0}
 portlets.admin.warNotUnDeployed=Impossible de supprimer le fichier war. Supprimez le manuellement {0}
-portlets.admin.invalidCharacters=Seuls les lettres (a-z,A-Z) et les chiffres (0-9) sont autoris\u00E9s
-portlets.admin.noBasePortlet=S\u00E9lectionnez une portlet
+portlets.admin.invalidCharacters=Seuls les lettres (a-z,A-Z) et les chiffres (0-9) sont autoris\u00e9s
+portlets.admin.noBasePortlet=S\u00e9lectionnez une portlet
 portlets.admin.invalidPortletApp=Choose a Portlet Web Application
 portlets.admin.noPortletApp=Select a Portlet
-portlets.admin.noBasePortletWindow=S\u00E9lectionner la fen\u00EAtre \u00E0 modifier
-portlets.admin.modifySucceeded=Fen\u00EAtre modifi\u00E9e avec succ\u00E8s
-portlets.admin.modifyFailed=Echec lors de la modification de la fen\u00EAtre
-portlets.admin.noWindowData=Aucune donn\u00E9e disponible
-portlets.admin.portletWindowNameAlreadyExists=Echec lors de la cr\u00E9ation de la fen\u00EAtre. Une fen\u00EAtre de m\u00EAme nom existe d\u00E9j\u00E0 {0}.
+portlets.admin.noBasePortletWindow=S\u00e9lectionner la fen\u00eatre \u00e0 modifier
+portlets.admin.modifySucceeded=Fen\u00eatre modifi\u00e9e avec succ\u00e8s
+portlets.admin.modifyFailed=Echec lors de la modification de la fen\u00eatre
+portlets.admin.noWindowData=Aucune donn\u00e9e disponible
+portlets.admin.portletWindowNameAlreadyExists=Echec lors de la cr\u00e9ation de la fen\u00eatre. Une fen\u00eatre de m\u00eame nom existe d\u00e9j\u00e0 {0}.
