In back office, renaming "Référentiel" with "Utilisateurs & groupes"...
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@2812 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/silverpeas/jobManagerPeas/multilang/jobManagerPeasBundle_de.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobManagerPeas/multilang/jobManagerPeasBundle_de.properties
@@ -37,7 +37,7 @@ JKM = Klassierungsplan
 JSTAT = Statistiken
 JTOOLS = Tools
 
-JDP = Verweis
+JDP = Benutzer und Gruppen
 JSPP = Bereichverwaltung
 JRP = Profil
 JMAP = Wartung
