--- a/config-core/src/main/config/properties/com/silverpeas/jobManagerPeas/multilang/jobManagerPeasBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobManagerPeas/multilang/jobManagerPeasBundle_en.properties
@@ -34,7 +34,7 @@ JKM = Classification scheme
 JSTAT = Statistics
 JTOOLS = Tools
 
-JDP = Register
+JDP = Users & groups
 JSPP = Workspace
 JRP = Identity
 JMAP = Maintenance
