--- a/config-core/src/main/config/properties/com/silverpeas/jobManagerPeas/multilang/jobManagerPeasBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobManagerPeas/multilang/jobManagerPeasBundle_fr.properties
@@ -34,7 +34,7 @@ JKM = Plan de Classement
 JSTAT = Statistiques
 JTOOLS = Outils
 
-JDP = R\u00E9f\u00E9rentiel
+JDP = Utilisateurs & groupes
 JSPP = Gestion d'espaces
 JRP = Profil
 JMAP = Maintenance
