Closing feature #1328. Personalization screens have been merged with "My profile".
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@2818 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/silverpeas/socialNetwork/multilang/socialNetworkBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/socialNetwork/multilang/socialNetworkBundle_en.properties
@@ -74,3 +74,30 @@ newsFeed.photo.apdated.true=a modifi\u00E9 la photo
 newsFeed.photo.apdated.false=a publi\u00E9 la photo
 newsFeed.event.apdated.false=a publi\u00E9 l'\u00E9v\u00E9nement
 newsFeed.lastevent.apdated.false=a publi\u00E9 l'\u00E9v\u00E9nement
+
+myProfile.UserRights = Rights
+myProfile.OldPassword = Old password
+myProfile.NewPassword = New password
+myProfile.NewPasswordConfirm = Confirm new password 
+myProfile.WrongNewPwd = Wrong password confirmation...
+myProfile.MessageOK = Your profile has been successfully updated...
+myProfile.Error_bad_credential = Bad credentials, try again...
+myProfile.Error_unknown = Unable to update your profile, please contact your Administrator
+myProfile.ModifyPasswordNotAllowed1 = You are not allowed to modify your password here.
+myProfile.ModifyPasswordNotAllowed2 = Contact your Administrator...
+myProfile.LengthPwdLabel = minimum characters 
+myProfile.WrongLength = Incorrect password length!
+myProfile.NoSpacesInPassword = The password must not contain any blank spaces!
+myProfile.LoginQuestion = Question if password has been forgotten
+myProfile.LoginAnswer = Answer to the question
+
+myProfile.settings.FavoriteLanguage = Language
+myProfile.settings.language_fr = French
+myProfile.settings.language_de = Deutsch
+myProfile.settings.language_en = English
+myProfile.settings.FavoriteLook = Look
+myProfile.settings.DefaultWorkSpace = Default space
+myProfile.settings.Thesaurus = Enable thesaurus
+myProfile.settings.DragDrop = Enable drag n' drop
+myProfile.settings.WebdavEditing = Enable online edition
+myProfile.settings.ChangeLookAlert = The selected look will only be applied to spaces with no set look
