--- a/config-core/src/main/config/properties/com/silverpeas/socialNetwork/multilang/socialNetworkBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/socialNetwork/multilang/socialNetworkBundle_fr.properties
@@ -73,3 +73,30 @@ newsFeed.photo.apdated.true=a modifi\u00E9 la photo
 newsFeed.photo.apdated.false=a publi\u00E9 la photo
 newsFeed.event.apdated.false=a publi\u00E9 l'\u00E9v\u00E9nement
 newsFeed.lastevent.apdated.false=a publi\u00E9 l'\u00E9v\u00E9nement
+
+myProfile.UserRights = Droits
+myProfile.OldPassword = Ancien mot de passe
+myProfile.NewPassword = Nouveau mot de passe
+myProfile.NewPasswordConfirm = Confirmation du nouveau mot de passe
+myProfile.WrongNewPwd = La confirmation du mot de passe est incorrecte...
+myProfile.MessageOK = Votre profil a \u00E9t\u00E9 mis \u00E0 jour avec succ\u00E8s...
+myProfile.Error_bad_credential = Votre mot de passe est incorrect
+myProfile.Error_unknown = Impossible de modifier votre profil, veuillez contacter votre administrateur
+myProfile.ModifyPasswordNotAllowed1 = Vous ne pouvez pas modifier ici votre mot de passe.
+myProfile.ModifyPasswordNotAllowed2 = Contactez votre administrateur...
+myProfile.LengthPwdLabel = caract\u00E8res minimum
+myProfile.WrongLength = La longueur du mot de passe est insuffisante !
+myProfile.NoSpacesInPassword = Le mot de passe ne doit pas contenir d'espace !
+myProfile.LoginQuestion = Question en cas d'oubli de mot de passe
+myProfile.LoginAnswer = R\u00E9ponse \u00E0 la question
+
+myProfile.settings.FavoriteLanguage = Langue
+myProfile.settings.language_fr = Fran\u00E7ais
+myProfile.settings.language_de = Allemand
+myProfile.settings.language_en = Anglais
+myProfile.settings.FavoriteLook = Look
+myProfile.settings.DefaultWorkSpace = Espace par d\u00E9faut
+myProfile.settings.Thesaurus = Activer le th\u00E9saurus
+myProfile.settings.DragDrop = Activer le glisser/d\u00E9poser
+myProfile.settings.WebdavEditing = Activer l'\u00E9dition en ligne
+myProfile.settings.ChangeLookAlert = Le look personnel ne s'appliquera qu'aux espaces dont le look n'est pas impos\u00E9
