--- a/config-core/src/main/config/properties/com/stratelia/webactiv/homePage/multilang/homePageBundle_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/homePage/multilang/homePageBundle_de.properties
@@ -71,7 +71,7 @@ Feedback = Dem Administrator schreiben
 MyMap = Sitemap anzeigen
 Exit = Verlassen
 Help = Hilfe
-Personalization = Personaliseren
+Personalization = Mein Profil
 Clipboard = Zwischenspeicher
 
 NewMessages = neue Meldungen
