--- a/config-core/src/main/config/properties/com/stratelia/webactiv/homePage/multilang/homePageBundle_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/homePage/multilang/homePageBundle_en.properties
@@ -70,7 +70,7 @@ Feedback = Write to the administrator
 MyMap = Site Map
 Exit = Exit
 Help = Help
-Personalization = Personalize
+Personalization = My profile
 Clipboard = Clipboard
 
 NewMessages = new messages
