--- a/config-core/src/main/config/properties/com/stratelia/webactiv/homePage/multilang/homePageBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/homePage/multilang/homePageBundle_fr.properties
@@ -70,7 +70,7 @@ Feedback = Ecrire \u00E0 l'administrateur
 MyMap = Visualiser le plan du site
 Exit = Se d\u00E9connecter
 Help = Aide
-Personalization = Personnaliser
+Personalization = Mon profil
 Clipboard = Presse-papier
 
 NewMessages = nouveaux messages
