JdbcFieldDisplayer performance boost
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@2843 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/lib-core/src/test/resources/com/stratelia/webactiv/multilang/generalMultilang_fr.properties
+++ b/lib-core/src/test/resources/com/stratelia/webactiv/multilang/generalMultilang_fr.properties
@@ -42,21 +42,21 @@ GML.import						= Importer
 GML.back						= Retour
 
 GML.cancel						= Annuler
-GML.categories 						= Catégories
-GML.category	 					= Catégorie
-GML.cellularPhoneNumber 	                        = Tél. mobile
+GML.categories 						= Cat\u00e9gories
+GML.category	 					= Cat\u00e9gorie
+GML.cellularPhoneNumber 	                        = T\u00e9l. mobile
 GML.close						= Fermer
-GML.company 						= Société
+GML.company 						= Soci\u00e9t\u00e9
 GML.component                                           = KM Service
 GML.copy 						= Copier
-GML.create						= Créer
-GML.createPublication			                = Créer une publication
-GML.createTheme						= Créer un thème
+GML.create						= Cr\u00e9er
+GML.createPublication			                = Cr\u00e9er une publication
+GML.createTheme						= Cr\u00e9er un th\u00e8me
 GML.cut							= Couper
-GML.generatePDF						= Générer un PDF
+GML.generatePDF						= G\u00e9n\u00e9rer un PDF
 
 GML.date						= Date
-GML.dateBegin 						= Date de début 
+GML.dateBegin 						= Date de d\u00e9but 
 GML.dateEnd 						= Date de fin
 GML.day							= Jour
 GML.delete						= Supprimer
@@ -66,7 +66,7 @@ GML.detail						= D&eacute;tail
 GML.domain						= Espace
 GML.domainManager				= Gestionnaire de domaine
 GML.domains						= Espaces
-GML.download						= Téléchargement
+GML.download						= T\u00e9l\u00e9chargement
 
 GML.eMail 						= E-mail
 GML.empty                                               = Vide
@@ -76,21 +76,21 @@ GML.errors						= Erreurs
 
 GML.faxNumber 						= Fax
 GML.file						= Fichier
-GML.firstName                                           = Prénom
+GML.firstName                                           = Pr\u00e9nom
 
 GML.groupe						= Groupe
 GML.groupes						= Groupes
 GML.guest						= Invite
 
-GML.head						= Entête
+GML.head						= Ent\u00eate
 GML.help						= Aide
-GML.homePhoneNumber 			                = Tél. domicile
+GML.homePhoneNumber 			                = T\u00e9l. domicile
 
-GML.insertHere						= Insérer ici
+GML.insertHere						= Ins\u00e9rer ici
 
 GML.jobPeas						= Service
 
-GML.keyWords						= Mots clés
+GML.keyWords						= Mots cl\u00e9s
 GML.kmmanager                   = Gestionnaire du Plan de Classement
 
 GML.label						= Libell&eacute;
@@ -128,15 +128,15 @@ GML.order					        = Ordre
 GML.password 						= Mot de passe
 GML.paste						= Coller
 GML.path						= Emplacement
-GML.phoneNumber 					= Téléphone
+GML.phoneNumber 					= T\u00e9l\u00e9phone
 GML.position 						= Poste
 GML.public 						= Publique
-GML.preview						= Prévisualisation
-GML.previous						= Précédent
+GML.preview						= Pr\u00e9visualisation
+GML.previous						= Pr\u00e9c\u00e9dent
 GML.print						= Imprimer
-GML.priority 						= Priorité
-GML.privateFS 						= Privée
-GML.privateMS 						= Privé
+GML.priority 						= Priorit\u00e9
+GML.privateFS 						= Priv\u00e9e
+GML.privateMS 						= Priv\u00e9
 GML.publication						= Publication
 GML.publications					= Publications
 GML.publish						= Publier
@@ -148,19 +148,19 @@ GML.size						= Taille
 GML.space						= Espace
 GML.status						= Etat
 GML.subscription					= Abonnement
-GML.shrink						= Réduire
-GML.surname						= Prénom
-GML.selection						= Sélection
-GML.select						= Sélectionnez...
+GML.shrink						= R\u00e9duire
+GML.surname						= Pr\u00e9nom
+GML.selection						= S\u00e9lection
+GML.select						= S\u00e9lectionnez...
 
-GML.toSelect						= Sélectionner
+GML.toSelect						= S\u00e9lectionner
 GML.theField						= le champ
-GML.theme						= Thème
+GML.theme						= Th\u00e8me
 GML.title						= Titre
 GML.type						= Type
 
 GML.unlock					        = D&eacute;v&eacute;rouiller
-GML.upload						= Téléchargement
+GML.upload						= T\u00e9l\u00e9chargement
 GML.user						= Utilisateur
 GML.users						= Utilisateurs
 
@@ -169,10 +169,10 @@ GML.viewCalendar					= Afficher le calendrier
 GML.calendar = Calendrier
 GML.week						= Semaine
 
-GML.year 						= Année
+GML.year 						= Ann\u00e9e
 GML.yes						        = Oui
 
-// Titre fenêtre
+// Titre fen\u00eatre
 GML.popupTitle						= ___/ Silverpeas&#153; - Collaborative Portal Organizer \\_________________________________________
 
 GML.trademark						= &copy; 2001-2008 Silverpeas - All Rights Reserved
@@ -208,43 +208,43 @@ GML.shortJour7 = S
 GML.shortJour1 = D
 
 GML.mois0 = Janvier
-GML.mois1 = Février
+GML.mois1 = F\u00e9vrier
 GML.mois2 = Mars
 GML.mois3 = Avril
 GML.mois4 = Mai
 GML.mois5 = Juin
 GML.mois6 = Juillet
-GML.mois7 = Août
+GML.mois7 = Ao\u00fbt
 GML.mois8 = Septembre
 GML.mois9 = Octobre
 GML.mois10 = Novembre
-GML.mois11 = Décembre
+GML.mois11 = D\u00e9cembre
 
-//Contrôle JavaScript
+//Contr\u00f4le JavaScript
 GML.ThisFormContains = Ce formulaire contient 
-GML.MustBeFilled = doit être renseigné
+GML.MustBeFilled = doit \u00EAtre renseign\u00E9
 GML.MustContainsNumber = doit contenir un entier
 GML.MustContainsFloat = doit contenir un nombre
 GML.MustContainsCorrectDate = doit contenir une date
-GML.MustContainsPostDateTo = doit contenir une date postérieure à
-GML.MustContainsPostOrEqualDateTo = doit contenir une date postérieure ou égale à
-GML.MustContainsPostDate = doit contenir une date postérieure à aujourd'hui
+GML.MustContainsPostDateTo = doit contenir une date post\u00E9rieure \u00e0
+GML.MustContainsPostOrEqualDateTo = doit contenir une date post\u00E9rieure ou \u00E9gale \u00e0
+GML.MustContainsPostDate = doit contenir une date post\u00E9rieure \u00E0 aujourd'hui
 GML.MustContainsDateBetween1 = doit contenir une date entre le
 GML.MustContainsDateBetween2 = et le
 GML.MustContainsCorrectHour = doit contenir une heure correcte
 
 //Plan de classement
 GML.PDC = Plan de Classement
-GML.PDCParam = Paramétrer l'utilisation du PDC
-GML.PDCNewPosition = Créer une nouvelle position
-GML.PDCDeletePosition = Supprimer la ou les positions sélectionnée(s)
+GML.PDCParam = Param\u00e9trer l'utilisation du PDC
+GML.PDCNewPosition = Cr\u00e9er une nouvelle position
+GML.PDCDeletePosition = Supprimer la ou les positions s\u00e9lectionn\u00e9e(s)
 
-//Contrôles d'accès
-GML.ForbiddenAccessContent = Vous n'avez pas les droits suffisants pour accéder à l'information désirée !
+//Contr\u00f4les d'acc\u00e8s
+GML.ForbiddenAccessContent = Vous n'avez pas les droits suffisants pour acc\u00e9der \u00e0 l'information d\u00e9sir\u00e9e !
 GML.DocumentNotFound = L'information que vous souhaitez consulter n'existe plus !
 
-GML.creationDate = Créé le
-GML.updateDate = Modifié le
+GML.creationDate = Cr\u00e9\u00e9 le
+GML.updateDate = Modifi\u00e9 le
 
 GML.language = Langue
 GML.translationRemove = Supprimer cette traduction
@@ -255,14 +255,14 @@ GML.ligne = - Ligne
 GML.colonne = Colonne
 GML.valeur = Valeur
 GML.obligatoire = Ce champ est obligatoire
-GML.nbCarMax = La valeur ne doit pas dépasser
+GML.nbCarMax = La valeur ne doit pas d\u00e9passer
 GML.nbCarMin = La valeur doit comporter au moins
-GML.caracteres = caractères
+GML.caracteres = caract\u00e8res
 GML.errorCsvFile = Erreur, on ne peut uploader que des fichiers d'extension .csv
 //Export CSV
-GML.ExportSucceeded = Export réussi.
-GML.ExportFailed = L'export a échoué.
+GML.ExportSucceeded = Export r\u00e9ussi.
+GML.ExportFailed = L'export a \u00e9chou\u00e9.
 GML.ExportInProgress = Export en cours...
 
-GML.DragNDropExpand = Pour déposer rapidement un fichier...
+GML.DragNDropExpand = Pour d\u00e9poser rapidement un fichier...
 GML.DragNDropCollapse = Fermer
