fixing bug #1363. Related to XML import, errors on field are caught in the loop. Then, following fields are well imported. Furthermore, now empty field image is not processed.
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@2850 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/silvertrace/messages/importExportMessages_en.properties
+++ b/config-core/src/main/config/silvertrace/messages/importExportMessages_en.properties
@@ -37,3 +37,4 @@ importExport.EX_CANT_CREATE_CONTENT = Impossible de creer le contenu de la publi
 importExport.EX_PUBLICATION_NOT_EXISTS_FOR_ID = Publication inexistante pour l'id donné
 
 importExport.EX_CANT_INIT_SCHEDULED_IMPORT = Impossible d'initialiser l'import planifié
+importExport.EX_CANT_IMPORT_XML_FIELD = Erreur lors de l'import d'un champ XML
