--- a/config-core/src/main/config/silvertrace/messages/importExportMessages_fr.properties
+++ b/config-core/src/main/config/silvertrace/messages/importExportMessages_fr.properties
@@ -37,3 +37,4 @@ importExport.EX_CANT_CREATE_CONTENT = Impossible de creer le contenu de la publi
 importExport.EX_PUBLICATION_NOT_EXISTS_FOR_ID = Publication inexistante pour l'id donné
 
 importExport.EX_CANT_INIT_SCHEDULED_IMPORT = Impossible d'initialiser l'import planifié
+importExport.EX_CANT_IMPORT_XML_FIELD = Erreur lors de l'import d'un champ XML
