Changing BrowseBar operations label into "Que voulez-vous faire ?"
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@2867 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/viewGenerator/multilang/graphicElementFactoryBundle_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/viewGenerator/multilang/graphicElementFactoryBundle_en.properties
@@ -34,4 +34,4 @@ GEF.pagination.jumper = Page...
 GEF.progressMessage.message1 = Application being processed
 GEF.progressMessage.message2 = Please wait...
 
-GEF.operations.label = Operations
+GEF.operations.label = What do you do?
