--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/viewGenerator/multilang/graphicElementFactoryBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/viewGenerator/multilang/graphicElementFactoryBundle_fr.properties
@@ -34,4 +34,4 @@ GEF.pagination.jumper = Page...
 GEF.progressMessage.message1 = Traitement en cours
 GEF.progressMessage.message2 = Merci de bien vouloir patienter...
 
-GEF.operations.label = Opérations
+GEF.operations.label = Que voulez-vous faire ?
