Feature #1323 done: the callback mechanism supports now the comment adding and deletion in Silverpeas. When invoked the     callbacks registered for such events, the added or deleted comment is passed as an invocation parameter.
    Feature #1322 done: the classifieds component registers a callback for comment adding events and then notifies all the
    users concerned by the comment (the author of the classified and thoses that commented it)

    Improve the quality of some codes by taking into account the generics when needed.

git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@2897 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/silvertrace/messages/commentMessages_en.properties
+++ b/config-core/src/main/config/silvertrace/messages/commentMessages_en.properties
@@ -32,4 +32,5 @@ comment.GETTING_ALL_DOCUMENT_VERSIONS_FAILED = Failed to get all document versio
 comment.GETTING_LAST_DOCUMENTS_VERSION_FAILED = Failed to get last document versions for this publication
 comment.GETTING_LAST_PUBLIC_DOCUMENTS_FAILED = Failed to get last public document versions for this publication
 comment.GETTING_LAST_PUBLIC_AND_LAST_ARCHIVE_DOCUMENTS_VERSION_FAILED = Failed to get last document public and archive versions for this publication
+comment.UNKNOWN_ACTION = An unsupported action is notified!
 
