--- a/config-core/src/main/config/silvertrace/messages/commentMessages_fr.properties
+++ b/config-core/src/main/config/silvertrace/messages/commentMessages_fr.properties
@@ -32,4 +32,5 @@ comment.GETTING_ALL_DOCUMENT_VERSIONS_FAILED = Impossible d'obtenir la liste des
 comment.GETTING_LAST_DOCUMENTS_VERSION_FAILED = Impossible d'obtenir la liste des dernières versions des documents de la publication
 comment.GETTING_LAST_PUBLIC_DOCUMENTS_FAILED = Impossible d'obtenir la liste des dernières versions publiques des documents de la publication
 comment.GETTING_LAST_PUBLIC_AND_LAST_ARCHIVE_DOCUMENTS_VERSION_FAILED = Impossible d'obtenir la liste des dernières versions publiques et archivées des documents de la publication
+comment.UNKNOWN_ACTION = Une action non supportée est notifiée !
 
