closing feature #1381 Now, each directory fragment (one per user) is totally customizable with StringTemplate.
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@2967 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_de.properties
@@ -274,3 +274,9 @@ GML.or = oder
 GML.galleries = Galleries
 
 GML.applet.dnd.alt=Applet for files drag and drop
+
+GML.user.type.A = Administrator
+GML.user.type.D = Domain-Administrator
+GML.user.type.K = Administrator des Klassierungsplanes
+GML.user.type.U = Ben&uuml;tzer
+GML.user.type.G = Gast
