--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_en.properties
@@ -274,3 +274,9 @@ GML.linkTo = Link to
 GML.or = or
 GML.galleries = Galleries
 GML.applet.dnd.alt=Applet for files drag and drop
+
+GML.user.type.A = Administrator
+GML.user.type.D = Domain manager
+GML.user.type.K = Classification scheme manager
+GML.user.type.U = User
+GML.user.type.G = Guest
