--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_fr.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_fr.properties
@@ -84,7 +84,7 @@ GML.firstName                                           = Pr\u00E9nom
 
 GML.groupe						= Groupe
 GML.groupes						= Groupes
-GML.guest						= Invite
+GML.guest						= Invit\u00E9
 
 GML.head						= Ent\u00EAte
 GML.help						= Aide
@@ -279,3 +279,9 @@ GML.linkTo = R\u00E9f\u00E9rencer
 GML.or = ou
 GML.galleries = Phototh\u00E8ques
 GML.applet.dnd.alt=Applet pour le glisser/d\u00E9poser de fichiers
+
+GML.user.type.A = Administrateur
+GML.user.type.D = Gestionnaire de domaine
+GML.user.type.K = Gestionnaire du Plan de Classement
+GML.user.type.U = Utilisateur
+GML.user.type.G = Invit\u00E9
